fixed the login form on smaller screen

--- a/client/css/loginWidget.less
+++ b/client/css/loginWidget.less
@@ -257,7 +257,7 @@ body{
         left:0;right:0;
         box-sizing:border-box;
         .inner{
-          width:@totalWidth+300px;
+          width:@totalWidth+10px;
           height:100%;
           top:0;
           left:0;
@@ -267,8 +267,8 @@ body{
           margin-right:auto;
           margin-top:0;
           margin-bottom:0;
-          padding-left:150px;
-          padding-right:150px;
+          padding-left:5px;
+          padding-right:5px;
           position: absolute;
           background-color:rgba(0,0,0,0);
           overflow-y:auto;
